--- a/css/navbar.css
+++ b/css/navbar.css
@@ -52,7 +52,7 @@ nav ul li a:hover {
   padding: 0;
 }
 
-.navigation-bar.black #up-arrow {
+.navigation-bar.black #up-arrow img {
   display: block;
 }
 
@@ -62,6 +62,22 @@ nav ul li a:hover {
 }
 
 @media only screen and (max-width: 992px) {
+
+  #up-arrow {
+    display: none;
+  }
+
+  .bottom {
+    display: block;
+    text-align: center;
+  }
+  .copyright {
+    font-size: 10px;
+  }
+
+  #cards {
+    text-align: right;
+  }
 
   .section-transition {
     height: auto;
